--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 #cover {
     height: 480px;
 }
+.container-fluid {
+    display: flex;
+    justify-content: space-between;
+}
+.nav {
+    display: flex;
+}
